--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "latest",
+    "@coinbase/onchainkit": "^0.38.13",
+    "@farcaster/core": "^0.16.4",
+    "@farcaster/frame-core": "^0.0.40",
     "@farcaster/frame-sdk": "^0.0.35",
+    "@tanstack/react-query": "^5",
+    "@types/sharp": "^0.31.1",
     "@upstash/redis": "^1.34.4",
     "next": "^14.2.15",
+    "openai": "^4.102.0",
     "react": "^18",
     "react-dom": "^18",
-    "@tanstack/react-query": "^5",
+    "satori": "^0.13.1",
+    "sharp": "^0.34.2",
     "viem": "^2.27.2",
     "wagmi": "^2.14.11"
   },
@@ -29,8 +35,8 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
